<resources>
    <string name="app_name">quote</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="q_required">Quote required</string>
    <string name="a_required">Author required</string>

    <string name="add_author">Add Author</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Quote</string>
    <string name="add_quote">Add Quote</string>
    <string name="search_quote">Search Quote</string>
    <string name="delete_quote">Delete Quote</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>